fix: marquee alignment

--- a/src/components/Marquee.module.sass
+++ b/src/components/Marquee.module.sass
@@ -8,6 +8,9 @@
     column-gap: 4.8rem
     margin-top: 9.6rem
 
+    div:not(.marqueeItem)
+        align-items: baseline
+
 .marqueeItem
     display: flex
     flex-direction: column
